--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,14 @@
     }],
     "routes": [
         {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
+        {
+            "src": "/media/(.*)",
+            "dest": "/media/$1"
+        },
+        {
             "src": "/(.*)",
             "dest": "mysite/wsgi.py"
         }
